# CWE-ChatBot

./: .env.example  .gitignore  .pip-audit-ignore.json  .pre-commit-config.yaml  .trufflehogignore  AGENTS.md  AUTOMATED_TOOLS_VS_MANUAL_ANALYSIS_REPORT.md  CLAUDE.md  CLAUDE.md.bak  CURRENT_DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION.md  INPUT_VALIDATION_SECURITY_REPORT.md  README.md  SECURITY.md  TEST_REPORT.md  TEST_SUMMARY.md  TOOLCHAIN.md  VULNERABILITY_ASSESSMENT_REPORT.md  chainlit.md  cloudbuild-chatbot.yaml  cloudbuild.yaml  docker-compose.test.yml  final_format.py  format_chat_accurate.py  format_chat_correct.py  format_chat_final.py  format_chat_v2.py  mypy.ini  notes.md  package-lock.json  package.json  process_chat_final.py  process_chat_precise.py  pyproject.toml  pyrightconfig.json  run_all_tests.sh  test_pdf_worker.sh  verify_e2e_readiness.sh
.bmad-core/agents/: dev.md
.cascade/: CRITICAL_LESSONS_LEARNED.md
.chainlit/: config.toml
.github/: README.md  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  quality.yml
apps/: __init__.py
apps/chatbot/: .env.example  CWE_DATA_FLOW.md  DEPLOYMENT.md  DEPLOYMENT_AUTH_MODES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SIMPLIFIED.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.secure  EPHEMERAL_PDF_ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  OAUTH_ONLY_MIGRATION.md  OAUTH_SETUP.md  PRODUCTION_SECURITY_DEPLOYMENT.md  QUICKSTART.md  README.md  SECRETS.md  STAGING_DEPLOYMENT_GUIDE.md  STAGING_DEPLOYMENT_SUMMARY.md  api.py  automated_flow_test.py  bootstrap.py  chainlit.md  cloudbuild.yaml  deploy.sh  deploy_staging.sh  handlers.py  health_server.py  healthcheck.py  main.py  main_simple.py  pytest.ini  quick_flow_test.sh  real_test_results.json  requirements.txt  run_local_full.sh  session_init.py  start_chatbot.sh  test_results.json
apps/cwe_ingestion/: MULTI_DATABASE_SETUP.md  PERSONA_QUERY_TESTING.md  README.md  __init__.py  __main__.py  cli.py  docker-compose.yml  downloader.py  embedder.py  embedding_cache.py  gcp_db_helper.py  models.py  multi_db_pipeline.py  parser.py  persona_queries_export.json  pg_chunk_store.py  pg_vector_store.py  pipeline.py  run_prod_full.sh  run_prod_secure.sh  setup.py  test_db_connection.py  test_halfvec_performance.py  test_iam_connection.py  test_multi_db.py  test_queries_personas.py  vector_store.py
apps/pdf_worker/: DEPLOYMENT_REPORT.md  Dockerfile  LIBMAGIC_DEPLOYMENT.md  R13_IMPLEMENTATION_REPORT.md  README.md  SECURITY_ASSESSMENT_REPORT.md  SECURITY_FIXES_APPLIED.md  main.py  requirements.txt  test_main_r13.py  test_worker_mode.sh
apps/tests/: conftest.py  test_r1_pass2.py
checkov.json/: results_json.json
checkov.sarif/: results_sarif.sarif
database/init/: 01-init-schema.sql
docs/: CLOUD_RUN_HEALTH_CHECKS.md  CSP-AND-LOGO-FIXES-2025-10-11.md  CWE_INGESTION_TYPING_FIXES.md  CWE_RETRIEVAL_PERFORMANCE_REPORT.md  CWE_RETRIEVAL_SYSTEM_GUIDE.md  DATABASE_OPERATIONS_RUNBOOK.md  DEBUG_MESSAGE_LOGGING.md  DEPLOYMENT-2025-10-10.md  DEPLOYMENT-D4-FIX-2025-10-10.md  DEPLOYMENT_REPORT_2025-10-08.md  E2E_TEST_GUIDE_PHASE_5.md  E2E_TEST_REPORT_2025-10-08.md  LLM_GUARDRAILS.md  MODEL-ARMOR-ENABLED-2025-10-10.md  PHASE_5_E2E_RESULTS.md  PHASE_5_IMPLEMENTATION_SUMMARY.md  RETRIEVAL_SYSTEM_GUIDE.md  SECURITY_SCANNING.md  SEMGREP_SECURITY_REVIEW.md  TEST_REPORT_2025-10-08.md  TEST_REPORT_STORY_4_3.md  TOOLCHAIN_CLEANUP_2025-10-08.md  TROUBLESHOOTING_PHASE_5.md  architecture.md  architecture_review.md  attack_tree.md  bmad_planning_chat_admonitions.md  bmad_planning_chat_formatted.md  bmad_planning_chat_formatted_complete.md  bmad_planning_chat_formatted_fixed.md  bmad_planning_chat_formatted_full.md  bmad_planning_chat_manual.md  bmad_planning_chat_properly_formatted.md  bmad_planning_chat_with_admonitions.md  prd.md  prd_review.md  prd_status.md  product_owner_review.md  project-brief.md  security_architecture_checklist.md  (+5 more)
docs/ADR/: BM25.md  EmbeddingModelChoiceforCWEChatbot.md  EmbeddingModelChoiceforCWEChatbot_v2.md  OWASP-WAF-Rules.md  README.md  cloud.md  cwe-field-selection.md  database.md  frontend-performance-optimization.md  llm_framework.md  llm_framework_2.md  logging.md
docs/architecture/: backend-architecture.md  coding-standards.md  core-workflows.md  data-models.md  database-schema.md  deployment-architecture.md  development-workflow.md  error-handling-strategy.md  external-apis.md  frontend-architecture.md  high-level-architecture.md  index.md  introduction.md  rest-api-spec.md  security.md  tech-stack.md  unified-project-structure.md
docs/chats/: BMAD_security_agent_chat.md  BMAD_security_agent_chat_formatted.md  GUI.md  bmad_planning_chat.md  bmad_planning_chat_with_admonitions.md  bmad_security_agent_owasp_new_ai_guide.md  bmad_security_stories.md  bmad_user_stories.md  github_add_stories.md  gui_bmad.md
docs/costs/: CLOUD_RUN_COST_ANALYSIS.md  CLOUD_RUN_CPU_THROTTLING_EXPLAINED.md  CLOUD_RUN_MIN_INSTANCES_EXPLAINED.md  costs.md
docs/design/: gcp_rate_limiting_and_budgets.md  pdf_extraction.md  upload_evidence_clearing.md
docs/feedback/: CHANGELOG.md  QA_FIXES_SUMMARY.md  QUESTION_MAPPING_TO_PRD.md  README.md  REVISION_SUMMARY.md  SCOPE_UPDATE.md  VOLUNTEER_TESTING_GUIDE.md  google_form_script.gs  google_form_script_REVISED.gs
docs/fixes/: cwe-analyzer-truncation-fix-2025-10-09.md
docs/issues/: chainlit-mime-type-wildcard-warning.md
docs/personas_scenarios/: User Personas.md
docs/plans/: 1.1.Project-Repository-Setup.md  1.2.Chainlit-Deployment-to-Cloud-Run.md  1.3.CWE-Data-Ingestion-Pipeline.md  3.4.md  (+21 more)
public/: custom.css  custom.js  theme_min.css
scripts/: README.md  bandit.sh  capture_r1_screenshots.py  checkov_scan.sh  deploy_per_ip_rate_limit.sh  format_chat.py  process_chat_final.py  process_chat_precise.py  process_user_stories_chat.py  promote_staging_to_production.sh  rollout_per_user_rate_limit.sh  s2_setup_model_armor.sh  s2_setup_observability.sh  s2_smoke_test.py  s2_validate_log_format.sh  semgrep_scan.sh  setup_budgets.sh  staging_deploy_per_user_rate_limit.sh  test_per_ip_rate_limit_manual.sh  update_chat_admonitions.py
(+564 files in other folders)
