[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cwe-chatbot"
version = "0.1.0"
description = "CWE ChatBot - Conversational AI for Common Weakness Enumeration"
authors = ["CWE-ChatBot Team"]
packages = [
    # Expose the Chainlit app package at import path `src.*`
    {include = "src", from = "apps/chatbot"},
    {include = "shared", from = "."},
]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies for CWE data ingestion pipeline
requests = "^2.31.0"
lxml = "^6.0.0"
defusedxml = "^0.7.1" 
#chromadb = "^0.4.15"
click = "^8.3.0"
numpy = "^1.24.3"
tiktoken = "^0.12.0"

# Story 2.1 Dependencies - Core NLU & Query Matching
chainlit = "^2.8.4"  # For chat interface
psycopg2-binary = "^2.9.11"  # For PostgreSQL connection
pgvector = "^0.4.1"  # For vector database operations
rank-bm25 = "^0.2.2"  # For sparse retrieval
cryptography = "^46.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# Story 1.4 Dependencies - Gemini API Integration
google-generativeai = "^0.8.0"  # For Gemini embedding model
psycopg = {extras = ["binary"], version = "^3.2.12"}

# Optional dependencies
httpx = {extras = ["http2"], version = "^0.28.1"}
google-cloud-aiplatform = "^1.125.0"
google-cloud-modelarmor = "^0.3.0"  # For Model Armor sanitize APIs
python-socketio = "5.14.3"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.44"
tenacity = "^8.2.0"  # For exponential backoff retries

[tool.poetry.extras]
local-embeddings = ["sentence-transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^7.0.0"
ruff = "^0.14.3"
mypy = "^1.18.2"
toml = "^0.10.2"
pre-commit = "^3.4.0"
python-dotenv = "^1.2.1"

# Story 2.6 Dependencies - UI/UX Testing with Playwright
playwright = "^1.40.0"
pytest-playwright = "^0.7.1"
pytest-asyncio = "^0.23.8"
pytest-mock = "^3.15.1"
pyright = "^1.1.407"

[tool.poetry.group.pdf_worker]
optional = true

[tool.poetry.group.pdf_worker.dependencies]
pikepdf = "^9.4.0"
"pdfminer.six" = "^20240706"
python-magic = "^0.4.27"
google-cloud-modelarmor = ">=0.2.8,<1.0.0"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
    "S",   # flake8-bandit security checks
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "E722", "F841", "W293", "F821", "E402", "F401", "W291", "N999", "N814", "N817", "C901"]
"apps/chatbot/tests/**/*.py" = ["E501", "E722", "F841", "W293", "F821", "E402", "F401", "W291", "N999", "N814", "N817", "C901"]
"apps/cwe_ingestion/tests/**/*.py" = ["F841", "C901"]
"apps/cwe_ingestion/scripts/**/*.py" = ["C901"]  # Utility scripts - low priority
"tests/scripts/**/*.py" = ["E402", "W291", "F401", "N999", "N814", "N817", "F821"]

# Security patterns - intentional exceptions
"apps/chatbot/api.py" = ["C901", "S101", "S110"]  # _verify_bearer_token (23) JWT validation, S101/S110: test patterns
"apps/chatbot/src/query_handler.py" = ["S110"]  # S110: pass in exception handlers for retry logic
"apps/cwe_ingestion/cwe_ingestion/pg_chunk_store.py" = ["C901", "S101", "S110", "S608"]  # _get_connection(14), query_hybrid(13)
"apps/pdf_worker/main.py" = ["C901"]  # _run_worker(13), pdf_worker(19) - Story 4.3 PDF processing

# ✅ R18 REFACTORING SUCCESS - CRITICAL PRODUCTION CODE RESOLVED
# Phase 1: main() message handler: 40 → ~3 (extracted to handlers.py) ✅
# Phase 2: Bootstrapper and Strategy patterns extracted ✅
# Phase 3: start() session init: 18 → ~3 (extracted to session_init.py) ✅
# Result: main.py message handling and api.py complexity resolved

# Remaining C901 violations in production code (defer to future refactoring):
# apps/chatbot/main.py:
#   - oauth_callback (12) - OAuth provider integration (deferred per R18.md)
# apps/chatbot/src/file_processor.py:
#   - _call_pdf_worker_sync (11) - Story 4.3 PDF processing
#   - process_attachments (12) - Story 4.3 file handling
# apps/chatbot/src/input_security.py:
#   - sanitize_input (11) - Security validation logic
# apps/chatbot/src/utils/text_post.py:
#   - harmonize_cwe_names_in_table (11) - Utility function
# CWE Ingestion (separate module):
#   - cli.py: query(13), ingest_multi(20)
#   - models.py: entry_to_sections(37) - Complex XML parsing
# Tests: 15+ test functions - acceptable complexity for test code

"apps/chatbot/main.py" = ["C901"]  # oauth_callback (12) - deferred per R18.md
"apps/chatbot/src/file_processor.py" = ["C901", "S108"]  # Story 4.3 PDF worker complexity (11, 12), S108: /tmp secure
"apps/chatbot/src/input_security.py" = ["C901"]  # sanitize_input (11) - security validation
"apps/chatbot/src/utils/text_post.py" = ["C901"]  # harmonize_cwe_names_in_table (11) - utility
"apps/cwe_ingestion/cwe_ingestion/cli.py" = ["C901"]  # query(13), ingest_multi(20)
"apps/cwe_ingestion/cwe_ingestion/models.py" = ["C901"]  # entry_to_sections(37) - XML parsing



[tool.pytest.ini_options]
# Only include unit tests in apps/ directories
# tests/ at root contains integration/E2E tests with external dependencies (websocket, playwright, etc.)
testpaths = ["apps/chatbot/tests", "shared/tests", "apps/tests"]
python_files = ["test_*.py", "*_test.py"]
# Exclude standalone test scripts that are meant to be run directly with python3
norecursedirs = ["tests", ".git", ".tox", "dist", "build", "*.egg"]
addopts = "--cov=apps/chatbot/src --cov=shared --cov-report=html --cov-report=term"
markers = [
    "security: marks tests as security-related tests",
    "security_critical: marks tests as critical for deployment gate (must pass before deployment)",
    "integration: marks tests as requiring real database or external services"
]

# Playwright-specific test configuration
[tool.pytest.ini_options.playwright]
# Default to chromium for UI tests, can be overridden with --browser flag
browser = "chromium"
# Use headed mode for interactive testing, can be overridden with --headless
headed = true
# Screenshot and video settings
screenshot = "only-on-failure"
video = "retain-on-failure"
# Base URL for testing (will be configured per environment)
base_url = "http://localhost:8000"

[tool.mypy]
python_version = "3.10"
# Strict type checking flags
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Display options
show_error_context = true
show_column_numbers = true
show_error_codes = true
# Module handling
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
# Check only first-party code
files = [
  "apps/chatbot/src",
  "shared",
  "apps/cwe_ingestion/cwe_ingestion",
]
disable_error_code = ["import-untyped"]
exclude = [
  "^build/.*",
  "^dist/.*",
  "^apps/.*/build/.*",
  "^apps/cwe_ingestion/build/lib/.*",
  "^scripts/.*",
  "^apps/cwe_ingestion/scripts/.*",
]

# Per-module overrides for gradual typing
[[tool.mypy.overrides]]
module = "apps.chatbot.src.*"
disallow_untyped_defs = false

# cwe_ingestion: Strict typing enabled - incremental fixes needed
# Removed ignore_errors overrides to enable full type checking

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
